--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 	<div class="container">
 		<div class="row row-content">
 			<div class="col-xs-12">
-				<div id="mycarousel" class="carousel slide" data-ride="carousel">
+				<div id="mycarousel" class="carousel slide" data-ride="carousel" >
 				<!-- Indicators -->
           <ol class="carousel-indicators">
             <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
@@ -256,6 +256,14 @@
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </a>
+          <div class="btn-group" id="carouselButtons">
+            <button class="btn btn-danger btn-xs" id="carousel-pause">
+        	    <span class="glyphicon glyphicon-pause" aria-hidden="true"></span>
+            </button>
+            <button class="btn btn-danger btn-xs" id="carousel-play">
+        	    <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+            </button>
+          </div>
 				</div>
 			</div>
 		</div>
@@ -379,6 +387,13 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="js/bootstrap.min.js"></script>
+	<script>
+    $(document).ready(function(){
+      $("#mycarousel").carousel( { interval: 2000 } );
+      $("#carousel-pause").click(function(){$("#mycarousel").carousel('pause');});
+      $("#carousel-play").click(function(){$("#mycarousel").carousel('cycle'); });
+    });
+  </script>
 </body>
 
 </html>
